--- a/add client.html
+++ b/add client.html
@@ -107,7 +107,7 @@
       </section>
     </div> -->
 
-    <form id="add-client-form">
+    <form class="hide" id="add-client-form">
       <div class="container">
         <!-- Header for Add Client Form -->
         <h1 class="d-form-head my-5">Add Client</h1>
