--- a/dashbord.html
+++ b/dashbord.html
@@ -155,7 +155,18 @@
         <form class="slide-ctnr" id="add-vendor-form">
           <div class="container">
             <!-- Header for Vendor Details Form -->
-            <h1 class="my-5 d-form-head">Vendor's Details</h1>
+            <div class="col-12 mt-5">
+              <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-3">
+                  <h1 class="my-5 d-form-head">add vendor</h1>
+                </div>
+
+                <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                  <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                  <button class="add-data-btn">view vendor</button>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <!-- Column 1: Date Input -->
               <div class="col-2">
@@ -192,9 +203,7 @@
 
               <!-- Column 5: Save Button -->
             </div>
-            <div class="col-1 mt-5 mx-auto">
-              <button class="add-data-btn">Save</button>
-            </div>
+            
           </div>
         </form>
         <!-- add vendor form end-->
@@ -204,7 +213,18 @@
         <form class="slide-ctnr" id="add-product-form">
           <div class="container">
             <!-- Header for Add Product Form -->
-            <h1 class="my-5 d-form-head">Add Product</h1>
+            <div class="col-12 mt-5">
+              <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-3">
+                  <h1 class="my-5 d-form-head">add product</h1>
+                </div>
+
+                <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                  <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                  <button class="add-data-btn" id="add-vendor-save-btn">view products</button>
+                </div>
+              </div>
+            </div>
 
             <div class="row">
               <!-- Column 1: Date Input -->
@@ -269,9 +289,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-1 mt-5 mx-auto">
-              <button class="add-data-btn w-100">Save</button>
-            </div>
           </div>
         </form>
         <!-- add product form end -->
@@ -280,7 +297,18 @@
         <form class="slide-ctnr" id="vendor-transaction-form">
           <div class="container">
             <!-- Header for Vendor Transaction Form -->
-            <h1 class="my-5 d-form-head">Vendor's Transaction</h1>
+            <div class="col-12 mt-5">
+              <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-3">
+                  <h1 class="my-5 d-form-head">Vendor's transactions</h1>
+                </div>
+
+                <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                  <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                  <button class="add-data-btn" id="add-vendor-save-btn">view transactions</button>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <!-- Column 1: Product Select -->
               <div class="col-3">
@@ -357,11 +385,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Save Button -->
-            <div class="col-1 mt-5 mx-auto">
-              <button class="add-data-btn">Save</button>
-            </div>
           </div>
         </form>
         <!-- vendor transaction form end-->
@@ -370,7 +393,18 @@
         <form class="slide-ctnr" id="add-client-form">
           <div class="container">
             <!-- Header for Add Client Form -->
-            <h1 class="d-form-head my-5">Add Client</h1>
+            <div class="col-12 mt-5">
+              <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-3">
+                  <h1 class="my-5 d-form-head">add client</h1>
+                </div>
+
+                <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                  <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                  <button class="add-data-btn" id="add-vendor-save-btn">view clients</button>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <!-- Column 1: Date Input -->
               <div class="col-3">
@@ -410,11 +444,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Save Button -->
-            <div class="col-1 mt-5 mx-auto">
-              <button class="add-data-btn">Save</button>
-            </div>
           </div>
         </form>
         <!-- add client form end-->
@@ -424,7 +453,18 @@
         <form class="slide-ctnr" id="client-entry-form">
           <div class="container">
             <!-- Header for Client's Entry Form -->
-            <h1 class="d-form-head py-5">Client's Entry</h1>
+                        <div class="col-12 mt-5">
+              <div class="row d-flex justify-content-between align-items-center">
+                <div class="col-3">
+                  <h1 class="my-5 d-form-head">client's entry</h1>
+                </div>
+
+                <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                  <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                  <button class="add-data-btn" id="add-vendor-save-btn">view entries</button>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <!-- Column 1: Date Input -->
               <div class="col-3">
@@ -544,11 +584,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- Save Button -->
-            <div class="col-1 mt-5 mx-auto">
-              <button class="add-data-btn">Save</button>
-            </div>
           </div>
         </form>
         <!-- client entry form end-->
@@ -558,7 +593,18 @@
         <form class="slide-ctnr" id="add-employee-form">
           <div class="container">
             <section>
-              <h1 class="d-form-head my-5">Add Employee</h1>
+              <div class="col-12 mt-5">
+                <div class="row d-flex justify-content-between align-items-center">
+                  <div class="col-3">
+                    <h1 class="my-5 d-form-head">add employee</h1>
+                  </div>
+  
+                  <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                    <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                    <button class="add-data-btn" id="add-vendor-save-btn">view employees</button>
+                  </div>
+                </div>
+              </div>
               <div class="row">
                 <!-- Column 1: Date Input -->
                 <div class="col-3">
@@ -604,11 +650,6 @@
                     <label for="add-employee-salary" class="form-label">Salary :</label>
                     <input type="number" id="add-employee-salary" class="py-1 form-inps w-100" />
                   </div>
-                </div>
-
-                <!-- Save Button -->
-                <div class="col-1 mt-5 mx-auto">
-                  <button class="add-data-btn">Save</button>
                 </div>
               </div>
             </section>
@@ -620,7 +661,18 @@
         <form class="slide-ctnr" id="advance-salary-form">
           <div class="container">
             <section>
-              <h1 class="d-form-head my-5">Add Employee</h1>
+              <div class="col-12 mt-5">
+                <div class="row d-flex justify-content-between align-items-center">
+                  <div class="col-3">
+                    <h1 class="my-5 d-form-head">advance salary</h1>
+                  </div>
+  
+                  <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                    <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                    <button class="add-data-btn" id="add-vendor-save-btn">view salaries</button>
+                  </div>
+                </div>
+              </div>
               <div class="row">
                 <!-- Column 1: Date Input -->
                 <div class="col-3">
@@ -667,11 +719,6 @@
                     <input type="number" id="add-employee-salary" class="py-1 form-inps w-100" />
                   </div>
                 </div>
-
-                <!-- Save Button -->
-                <div class="col-1 mt-5 mx-auto">
-                  <button class="add-data-btn">Save</button>
-                </div>
               </div>
             </section>
           </div>
@@ -682,7 +729,18 @@
         <form class="slide-ctnr" id="payroll-entry-form">
           <div class="container">
             <section>
-              <h1 class="d-form-head my-5">Payroll Entry</h1>
+              <div class="col-12 mt-5">
+                <div class="row d-flex justify-content-between align-items-center">
+                  <div class="col-3">
+                    <h1 class="my-5 d-form-head">payroll entry</h1>
+                  </div>
+  
+                  <div class="col-3 d-flex justify-content-end align-items-center gap-2">
+                    <button class="add-data-btn" id="add-vendor-save-btn">Save</button>
+                    <button class="add-data-btn" id="add-vendor-save-btn">view entries</button>
+                  </div>
+                </div>
+              </div>
               <div class="row">
                 <!-- Column 1: Date Input -->
                 <div class="col-3">
@@ -763,11 +821,6 @@
                     <input type="number" id="payroll-entry-net-salary" class="py-1 form-inps w-100" readonly />
                   </div>
                 </div>
-
-                <!-- Save Button -->
-              </div>
-              <div class="col-1 mt-5 mx-auto">
-                <button class="add-data-btn">Save</button>
               </div>
             </section>
           </div>
