--- a/payroll entry.html
+++ b/payroll entry.html
@@ -38,6 +38,60 @@
   </head>
 
   <body>
+    <div class="container">
+      <h1 class="my-5 fw-bold">vendor list</h1>
+      <form>
+        <table class="mt-5 table">
+          <thead>
+            <tr>
+              <th scope="col" class="form-h-row">s.no</th>
+              <th scope="col" class="form-h-row">date</th>
+              <th scope="col" class="form-h-row">vendor name</th>
+              <th scope="col" class="form-h-row">address</th>
+              <th scope="col" class="form-h-row">cell num</th>
+              <th scope="col" class="form-h-row">buttons</th>
+            </tr>
+          </thead>
+
+          <tbody class="added-data-ctnr" id="add-vendor-data-ctnr">
+            <tr>
+              <td class="added-data">1.</td>
+              <td class="added-data">8/7/2024</td>
+              <td class="added-data">abdul ghafoor</td>
+              <td class="added-data">Karachi</td>
+              <td class="added-data">0391-1478954</td>
+              <td class="added-data">
+                <button class="edit-btn" id="edit-data-btn">edit</button>
+                <button class="delete-btn" id="delete-data-btn">delete</button>
+              </td>
+            </tr>
+
+            <tr>
+              <td class="added-data">1.</td>
+              <td class="added-data">8/7/2024</td>
+              <td class="added-data">abdul ghafoor</td>
+              <td class="added-data">Karachi</td>
+              <td class="added-data">0391-1478954</td>
+              <td class="added-data">
+                <button class="edit-btn" id="edit-data-btn">edit</button>
+                <button class="delete-btn" id="delete-data-btn">delete</button>
+              </td>
+            </tr>
+            <tr>
+              <td class="added-data">1.</td>
+              <td class="added-data">8/7/2024</td>
+              <td class="added-data">abdul ghafoor</td>
+              <td class="added-data">Karachi</td>
+              <td class="added-data">0391-1478954</td>
+              <td class="added-data">
+                <button class="edit-btn" id="edit-data-btn">edit</button>
+                <button class="delete-btn" id="delete-data-btn">delete</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
     <!-- <div class="container">
       <section>
         <h1 class="d-form-head my-5">Payroll Entry</h1>
@@ -159,7 +213,7 @@
       </section>
     </div> -->
 
-    <form id="payroll-entry-form">
+    <form class="hide" id="payroll-entry-form">
       <div class="container">
         <section>
           <h1 class="d-form-head my-5">Payroll Entry</h1>
