I chnged the ui.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         id="loginForm"
         class="d-flex justify-content-center align-items-center flex-column"
       >
-        <div class="form-group mb-5">
+        <div class="col-12 form-group mb-5">
           <label class="inp-lbl" for="email">Email:</label>
           <input
             type="email"
@@ -65,7 +65,7 @@
             placeholder="Enter your email"
           />
         </div>
-        <div class="form-group mb-5">
+        <div class="col-12 form-group mb-5">
           <label class="inp-lbl" for="password">Password:</label>
           <input
             type="password"
@@ -74,7 +74,7 @@
             placeholder="Enter your password"
           />
         </div>
-        <button class="sub-btn w-100" id="submit-btn">Login</button>
+        <button class="sub-btn w-25" id="submit-btn">Login</button>
       </form>
     </div>
 
