--- a/dashbord.html
+++ b/dashbord.html
@@ -731,7 +731,7 @@
                 </div>
               </div>
               <div class="col-12 mt-5 d-flex justify-content-start align-items-center gap-2">
-                <button class="add-data-btn" id="payroll-enttry-save-btn">Save</button>
+                <button class="add-data-btn" id="payroll-entry-save-btn">Save</button>
                 <button class="add-data-btn">view payroll entries</button>
               </div>
             </section>
